
  - Allow the Environment.WhereIs() method to take explicit path and
    pathext arguments (like the underlying SCons.Util.WhereIs() function).

  - Remove the long-obsolete {Get,Set}CommandHandler() functions.

  - Enhance env.Append() to suppress null values when appropriate.

  - Fix ParseConfig() so it works regardless of initial construction
    variable values.

  From Clark McGrew:

  - Generalize the action for .tex files so that it will decide whether
    a file is TeX or LaTeX, check the .aux output to decide if it should
    run bibtex, and check the .log output to re-run LaTeX if needed.

  From Bram Moolenaar:

  - Split the non-SCons-specific functionality from SConf.py to a new,
    re-usable Conftest.py module.

  From Gary Oberbrunner:

  - Allow a directory to be the target or source or dependency of a
    Depends(), Ignore(), Precious() or SideEffect() call.

  From Gerard Patel:

  - Use the %{_mandir} macro when building our RPM package.

  From Marko Rauhamaa:

  - Have the closing message say "...terminated because of errors" if
    there were any.

  From Anthony Roach:

  - On Win32 systems, only use "rm" to delete files if Cygwin is being
    used.   ("rm" doesn't understand Win32-format path names.)

  From Christoph Wiedemann:

  - Fix test/SWIG.py to find the Python include directory in all cases.



RELEASE 0.92 - Wed, 20 Aug 2003 03:45:28 -0500

  From Charles Crain and Gary Oberbrunner:

  - Fix Tool import problems with the Intel and PharLap linkers.

  From Steven Knight

  - Refactor the DictCmdGenerator class to be a Selector subclass.

  - Allow the DefaultEnvironment() function to take arguments and pass
    them to instantiation of the default construction environment.

  - Update the Debian package so it uses Python 2.2 and more closely
    resembles the currently official Debian packaging info.

  From Gerard Patel

  - When the yacc -d flag is used, take the .h file base name from the